# spriteslpcapi

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
.spriteslpcapi/: pyvenv.cfg
.spriteslpcapi/Scripts/: activate  activate.bat
src/: server.py
src/infra/mongodb/: database.py
src/infra/mongodb/repository/: spriteslpc_repository.py
src/models/: spritelpc_model.py
src/routes/: body.py  sprites_lpc.py
src/schemas/: spritelpc_schema.py
src/utils/: response.py  validator.py
