[tool.poetry]
name = "sprites lpc api"
version = "0.1.0"
description = "API de sprites para jogos"
authors = ["kazuyabr <sulivan.lineage2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
uvicorn = "^0.26.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
motor = "^3.3.2"

[tool.poetry.group.dev.dependencies]
python-multipart = "==0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
